# stock_research

./: .gitignore  README.md  README_UPGRADED.md  common_shared.py  dataset_pipeline.py  pyproject.toml  requirements.txt
LSTM/: trinary_LSTM.py
LightGBM/: trinary_LightGBM.py
Logistic_Regression/: trinary_logistic_regression.py
src/stock_pred/: __init__.py  common_shared.py  dataset_pipeline.py  news_pipeline.py
src/stock_pred/models/: __init__.py  lightgbm_trinary_LightGBM.py  logistic_regression_trinary_logistic_regression.py  lstm_trinary_LSTM.py  transformer_trinary_transformer_old.py
tests/: test_common_shared_regression.py  test_dataset_pipeline_regression.py  test_reproducibility_notes.py
tools/: compare_run_summaries.py
transformer/: trinary_transformer_old.py
